welcome.lessons.welcome.array.notriples.NoTriples.scala.error
noTriples:14: error: type mismatch;
 found   : Unit
 required: Boolean
  if ((deuxiemeTriplet == troisiemeTriplet) && (troisiemeTriplet = true)) {return false}
                                                                 ^